remove red border, fix duplicate scrollbar

--- a/mint/web/content/css/mint.css
+++ b/mint/web/content/css/mint.css
@@ -434,11 +434,9 @@ div#projectsPane {
     float: right;
     width: 227px;
     height: 345px;
-    border: 1px solid red;
     margin-left: 3px;
     margin-right: 3px;
     background: #eeeeee;
-    overflow: scroll;
 }
 
 div#projectsPane img.left {
